# e-ciclos-web

./: vercel.json
backend/: .gitattributes  .gitignore  app.py  app_flask.py  camino.py  grafo.py  map_clean3.osm  map_clean4.osm  map_cleano.osm  nodo.py  pyproject.toml  requirements.txt  routing.py  string_to_node.py  vercel.json
express-router-api/: .gitattributes  classes.js  graphLoader.js  limpiar_osm_duplicados.py  map_clean_limpio.osm  nodeFinder.js  package-lock.json  package.json  router copy.js  server.js
front/: global.txt  package-lock.json  package.json  vite.config.js
front/src/: RouteFinder.jsx  config.js  leaflet_fix.css  main.jsx
