[project]
name = "e-ciclos-backend"
version = "1.0.0"
dependencies = [
    "Flask==3.1.2",
    "osmnx==2.0.7",
    "networkx==3.3",
    "scikit-learn==1.8.0",
    "geopy==2.4.1",
    "requests==2.32.5",
    "fiona==1.10.1",
    "geopandas==0.14.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
# Forzar usar conda-forge para GDAL y dependencias espaciales
gdal = { index = "conda-forge" }
pyproj = { index = "conda-forge" }
shapely = { index = "conda-forge" }
fiona = { index = "conda-forge" }
geopandas = { index = "conda-forge" }